deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: word-game
spec:
    replicas: 1
    selector:
        matchLabels:
            app: word-game
    template:
        metadata:
            labels:
                app: word-game
        spec:
            containers:
                - name: word-game-app
                  image: europe-west2-docker.pkg.dev/word-game-383622/word-game-repo/word-game-v1:latest
                  # This app listens on port 8080 for web traffic by default.
                  ports:
                      - containerPort: 8080
---
