service.yaml
# The word-game service provides a load-balancing proxy over the word-game-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
    name: word-game
spec:
    type: LoadBalancer
    selector:
        app: word-game
    ports:
        - port: 80
          targetPort: 8080
---
