managed-cert-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: managed-cert-ingress
    annotations:
        kubernetes.io/ingress.global-static-ip-name: word-game-static-ip
        networking.gke.io/managed-certificates: managed-cert
        kubernetes.io/ingress.class: 'gce'
spec:
    defaultBackend:
        service:
            name: word-game-service
            port:
                number: 80
